Fixed code smell.